sim+docs: first-step onEntry and the RT process prologue in DFacsimile
The process prologue is the leading statements together with the first step's
onEntry, so DFacsimile now vets both in the bootstrap gate (mirroring
DropRTWaits Rule 6) and folds both into the time-zero state, leading statements
first. The onEntry folds only when its step is the process's first state: with
a leading wait or loop the FSM lowering keys the generated initial block on
that construct instead and leaves the hook on its transition edge.

Matching the lowering required moving hook emission from the goto site to the
transition's landing point. The lowering plants a goto's hooks at the end of
the flattened state body, i.e. after FlattenStepBlocks relocated the inter-step
trailing statements and cloned the prologue there, so onExit is now emitted
once per execution path right before the state write and onEntry inside the
state landing itself. As a consequence a sequential entry into a nested step
fires the parent's onExit and the child's onEntry, which is what the flattened
form does.

Two further fidelity gaps surfaced and are fixed here:

- A hook-carrying step, or one whose dispatch's first time-consuming action is
  hook-carrying, is never a FirstStepFusion candidate; it is now forced to keep
  a state of its own, so its hooks have a real FSM edge to land on.
- The fall-through cascade stops after re-entering the step the transition
  left, not before it (the lowering's guard sits inside handleNextStep, after
  that step's onEntry and state write). It now also emits only the next state's
  onEntry and state write, skipping the traversed state's own body, and re-runs
  the prologue when it passes the last state.

A cascade past the last state of a process with a fused entry state is
unsupported rather than approximated. FALL_THROUGH for loops remain the one
deferred M3 case (the stale-iterator lowering bug).

Verified with eight new lockstep DUTs against the dropRTProcess oracle on both
t